search on expanded sidebar

--- a/source/css/modules/nav.styl
+++ b/source/css/modules/nav.styl
@@ -16,6 +16,15 @@
 .breadcrumbs-active .site-nav
   top 50px
 
+main.main--closed
+  .site-nav
+    right 60px
+
+.breadcrumbs-active 
+  main.main--closed
+    .site-nav
+      top -2px
+
 .links__left
   display flex
   justify-content space-between
