--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -59,6 +59,7 @@ h1.region-4
 path
   transition fill-opacity 200ms ease-in-out, stroke-width 200ms ease-in-out
   fill-opacity 0
+  stroke-opacity 0
   &.north-africa
     stroke-opacity 0
     fill-opacity 0
