add AED tag at top of sidebar loader

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -2,7 +2,7 @@
 @import 'typography'
 
 aside
-  background #f7f7f7
+  background $white
   -webkit-box-shadow 0px 2px 5px rgba(0, 0, 0, 0.2)
   -moz-box-shadow 0px 2px 5px rgba(0, 0, 0, 0.2)
   box-shadow 0px 2px 5px rgba(0, 0, 0, 0.2)
@@ -294,6 +294,11 @@ aside table
     position absolute
     top 50%
     transform translate(-50%, -50%)
+  h4
+    font-size 0.75em
+    letter-spacing 0.15em
+    text-align center
+    text-transform uppercase
 
 .heading__small
   @extend .small-heading
