--- a/source/css/modules/nav.styl
+++ b/source/css/modules/nav.styl
@@ -9,6 +9,13 @@
   z-index 3
   width 62%
   //width 700px
+    
+  &.search-closed
+    transition width 400ms ease-in-out
+    width 45px
+  
+  &.search-open
+    transition width 200ms ease-in-out
 
 .sidebar--open .site-nav
   padding-right 0
