--- a/source/css/modules/search.styl
+++ b/source/css/modules/search.styl
@@ -1,9 +1,16 @@
 @import 'typography'
 
 .search__container
+  transition width ease 300ms
   width 100%
   position relative
   height 40px
+  
+  // &.blurred
+  //   width 45px
+  //   position absolute
+  //   top 15px
+  //   right 0
 
 .search__overlay
   background rgba(#222, 0.5);
