style total count area

--- a/source/css/modules/total_count.styl
+++ b/source/css/modules/total_count.styl
@@ -6,14 +6,15 @@
   font-family 'acumin-pro-condensed', sans-serif
   padding 0.5em 0.75em
   &__count
+    color $brand-dark
     padding-left 0.05em
-    padding-top 0.45em
+    padding-top 0.05em
     display block
     font-weight bold
-    font-size 3.8em
-    margin-bottom 9px
+    font-size 3.7em
+    margin-bottom 0
     position relative
-    bottom 10px
+    line-height 1.25
   small
     background transparent
     display inline-block
@@ -26,9 +27,11 @@
     margin-bottom 0.5em
 
 .total-count__plus-minus
-  font-size 78%
+  display block
+  font-size 45%
+  opacity 0.68
+  padding-bottom 0.05em
   position relative
-  bottom 5px
 
 .total-count__guesses
   position relative
