--- a/source/css/modules/total_count.styl
+++ b/source/css/modules/total_count.styl
@@ -7,35 +7,34 @@
   padding 0.5em 0.75em
   &__count
     color $brand-dark
-    padding-left 0.05em
-    padding-top 0.05em
+    padding 0 0 0 0.05em
     display block
     font-weight bold
     font-size 3.7em
     margin-bottom 0
     position relative
-    line-height 1.25
+    line-height 1.24
   small
     background transparent
-    display inline-block
+    display block
     text-transform uppercase
     letter-spacing 0.15em
     color #999
     font-size 9.5px
     font-family 'acumin-pro', Helvetica, sans-serif
+    font-weight 200
     padding 0 0.45em
-    margin-bottom 0.5em
+    margin-bottom 0.25em
 
 .total-count__plus-minus
-  display block
-  font-size 45%
+  font-size 0.4em
   opacity 0.68
-  padding-bottom 0.05em
+  padding-bottom 0
   position relative
 
 .total-count__guesses
   position relative
-  padding 0.05em 0.3em 0
+  padding 0 0.3em
   line-height 1
   font-size 1.1em
   letter-spacing 0.02em
