--- a/source/css/modules/about.styl
+++ b/source/css/modules/about.styl
@@ -1,12 +1,16 @@
-$about-sidebar-width = 35vw
-$about-content-width = 65vw
+$about-sidebar-width = 30vw
+$about-content-width = 70vw
 
 .about-container
   position relative
   display block
   width 100%
   
-  button
+  .button, button
+    display block
+    text-align center
+    text-decoration none
+    font-size 11px
     background $brand-orange
     border-radius 3px
     color $white
@@ -21,7 +25,7 @@ $about-content-width = 65vw
       transition background-color 0.25s
 
 .about-sidebar
-  max-width 400px
+  width $about-sidebar-width
   height 100%
   position fixed
   top 0
@@ -54,7 +58,7 @@ $about-content-width = 65vw
     &:after
       content ''
 
-  button
+  .button, button
     background $brand-dark
     width 100%
     &:hover
