--- a/source/css/modules/glossary.styl
+++ b/source/css/modules/glossary.styl
@@ -204,6 +204,7 @@ $glossary-content-width = 70vw
       &__header
         padding 1em
         position relative
+        cursor pointer
         &:after
           background url('/images/chevron-bold-up.svg') no-repeat 50% 70%
           background-size 100%
@@ -226,6 +227,25 @@ $glossary-content-width = 70vw
         display block
         margin 0 0 1.5em 75px
         padding 0 1em
+        
+        & > p
+          margin 0.5em 0
+          
+          &:first-child
+            margin-top 0
+          
+          &:last-child
+            margin-bottom 0
+        
+        & > ul 
+          margin 0.5em 0
+          
+          &.indented
+            & > li
+              margin-left 1.5em
+
+              
+          
         
     &__item.closed
       .glossary-toggle-list__item__text
@@ -253,6 +273,13 @@ $glossary-content-width = 70vw
         font-size 1.6em
         font-weight 700
         padding 0.25em 0.45em 0.35em
+      
+      p
+        margin-bottom 0.5em
+      
+      span.spaced
+        letter-spacing 0.1em
+        
     table
       margin 1.5em 0
       td
