--- a/source/css/modules/intro.styl
+++ b/source/css/modules/intro.styl
@@ -6,7 +6,13 @@
   left 0
   width 100%
   height 100vh
-  overflow auto    
+  overflow auto  
+  z-index 1002
+  
+  &.dismissed
+    transition opacity 150ms ease-in-out, z-index 300ms 300ms
+    opacity 0
+    z-index -1
   
   &__title
     font-family 'Noe Display', Georgia, serif
