stratum popups-unstyled

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -288,5 +288,21 @@ path
   stroke-opacity 1
   fill $west-africa
   fill-opacity 0
+  
+.stratum-popup
+  top -70px
+  opacity 0.9 !important
+  border-radius none
 
-
+  .leaflet-popup-content-wrapper
+    text-align center
+    border-radius 0
+    
+  &--eastern-africa
+    color $eastern-africa
+  &--west-africa
+    color $west-africa
+  &--central-africa
+    color $central-africa
+  &--southern-africa
+    color $southern-africa
