--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -95,6 +95,10 @@ aside table
       color #fff
       &:hover
         font-weight bold
+  li a.disabled
+    color #dddddd
+    pointer-events none
+    font-weight normal
 
 .sidebar__top-nav
   margin 0 0 15px 0
