breadcrumb on full sidebar

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -53,13 +53,18 @@ aside table
   -webkit-font-smoothing antialiased
   position relative
   &:first-child
+    transition padding 300ms ease-in-out
     background $brand-dark
     color #fff
     height auto
     padding-bottom 25px
+    aside.full &
+      padding-top 35px
   &:last-child
     overflow-y auto
     height 80vh
+  
+    
 
 .sidebar__year-nav__container
   background inherit
