--- a/source/css/modules/breadcrumb-nav.styl
+++ b/source/css/modules/breadcrumb-nav.styl
@@ -10,7 +10,7 @@
   z-index 2
   width 100%
   overflow hidden
-
+  
 .breadcrumb-nav__link
   border-bottom 1px solid transparent
   padding 12px
@@ -35,3 +35,30 @@
   opacity .4
   font-size 13px
   transform translateY(-1px)
+
+main.main--closed &
+  .breadcrumb-nav
+    transition padding 300ms ease-in-out, background 300ms
+    background transparent
+    z-index 3
+    -webkit-box-shadow none
+    -moz-box-shadow none
+    box-shadow none
+    padding-left 35px
+      
+    .breadcrumb-nav__link
+      transition all 300ms ease-in-out
+      color white
+      padding-top 10px
+      font-weight normal
+      
+    .breadcrumb-nav__separator
+      color #f8f8f8
+      
+    span:first-child
+      .breadcrumb-nav__link
+        padding-left 0
+    
+    span:last-child
+      .breadcrumb-nav__link
+        font-weight bold
