glossary links on sidebar

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -329,6 +329,7 @@ aside table
 
 .heading__small
   @extend .small-heading
+  position relative
 
 .sidebar__inner.region-southern-africa,
 .sidebar__loader.region-southern-africa
@@ -401,3 +402,13 @@ aside table
   
   &:hover
     text-decoration underline
+
+.sidebar__glossary-link
+  position absolute
+  top 0
+  right 0
+  width 25px
+  height 100%
+  background transparent url(/images/icon-glossary.svg) no-repeat center center
+  background-size 15px auto
+  
