update total count styles

--- a/source/css/modules/total_count.styl
+++ b/source/css/modules/total_count.styl
@@ -4,14 +4,14 @@
   bottom 0
   left 0
   font-family 'acumin-pro-condensed', sans-serif
-  padding 0.5em 0.75em
+  padding 0.3em 0.75em 0.5em
   &__count
     color $brand-dark
     padding 0 0 0 0.05em
     display block
     font-weight bold
     font-size 3.7em
-    margin-bottom 0
+    margin-bottom 0.2em
     position relative
     line-height 1.24
   small
@@ -23,7 +23,7 @@
     font-size 9.5px
     font-family 'acumin-pro', Helvetica, sans-serif
     font-weight 200
-    padding 0 0.45em
+    padding 0
     margin-bottom 0.25em
 
 .total-count__plus-minus
@@ -31,6 +31,11 @@
   opacity 0.68
   padding-bottom 0
   position relative
+  
+.total_count__container
+  margin-bottom 0.2em
+  small
+    padding 0 0.45em
 
 .total-count__guesses
   position relative
