glossary return link with sidebar state

--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -20,6 +20,7 @@
     margin-top: 30px
 
 .subgeography-totals__subgeography-name
+  position relative
   font-weight 700
   padding 0.8em 0
   span
@@ -28,6 +29,10 @@
     font-weight 400
     font-size 88%
     margin-left 0.2em
+  
+  .sidebar__glossary-link
+    position static
+    display inline-block
 
 .subgeography-totals__estimate
   font-weight 700
