add disabled button style

--- a/source/css/modules/about.styl
+++ b/source/css/modules/about.styl
@@ -23,6 +23,10 @@ $about-content-width = 70vw
     &:hover
       background darken($brand-orange, 10%)
       transition background-color 0.25s
+      
+  .button__disabled
+    background $gray-light
+    pointer-events none
 
 .about-sidebar
   width $about-sidebar-width
