adjust styles in glossary

--- a/source/css/modules/glossary.styl
+++ b/source/css/modules/glossary.styl
@@ -223,6 +223,7 @@ $glossary-content-width = 70vw
           width 75px
         &__title
           display table-cell
+          font-weight bold
       &__text
         display block
         margin 0 0 1.5em 75px
@@ -278,7 +279,7 @@ $glossary-content-width = 70vw
         margin-bottom 0.5em
       
       span.spaced
-        letter-spacing 0.1em
+        letter-spacing 0.05em
         
     table
       margin 1.5em 0
