--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -59,12 +59,10 @@ aside table
     height auto
     padding-bottom 25px
     aside.full &
-      padding-top 35px
+      padding-top 38px
   &:last-child
     overflow-y auto
     height 80vh
-  
-    
 
 .sidebar__year-nav__container
   background inherit
@@ -85,7 +83,7 @@ aside table
   padding 3px 16px 3px 0
   color #fff
   border-radius 0
-  font-size 14px
+  font-size 13px
   display table
   position absolute
   li a
@@ -132,7 +130,9 @@ aside table
   margin-bottom 10px
   display table
   color $gray-lightest
+  font-size 0.7em
   font-weight 700
+  line-height 1.3
   text-decoration none
   padding-bottom 3px
   cursor pointer
