style glossary link on fullwidth view

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -417,4 +417,10 @@ aside table
   &:hover
     opacity 1
     transition opacity 0.25s
-  
+    
+aside.full
+  .sidebar__glossary-link
+    background transparent url(/images/icon-glossary.svg) no-repeat 100% 100%
+    background-size 15px auto
+    vertical-align bottom
+    width 25px
