input zone tables

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -227,7 +227,7 @@ aside table
       padding 5px 8px
 
 .sidebar__count-summary
-  &--causes-of-change
+  &--causes-of-change, &--input-zones
     margin-top 30px
 
 .sidebar__table-container
@@ -262,6 +262,19 @@ aside table
       right 8px
     table
       display table
+  
+  &--input-zone
+    h3
+      padding-left 22px
+      &:hover
+        background #f8f8f8
+        transition background-color 0.3s
+      &:after
+        right auto
+        left 0
+        top 0
+        margin-top 0.8em
+        
 
 .sidebar__narrative
   margin 10px auto 15px
