--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -15,6 +15,20 @@
     text-align right
   td
     padding 0.9em 0.65em
+  
+  &--input-zone
+    td
+      padding 0.9em 0.65em 0.9em 22px
+    tbody tr
+      border-bottom none
+    
+    .sidebar__map-link
+      position relative
+      &:before
+        content '-'
+        display inline-block
+        position absolute
+        left -0.75em
     
   &--causes-of-change
     margin-top: 30px
@@ -33,6 +47,22 @@
   .sidebar__glossary-link
     position static
     display inline-block
+
+.subgeography-summary
+  color $text-light
+  display inline-block
+  font-weight 400
+  font-size 88%
+  margin-left 0.3em
+
+.subgeography__input-zone
+  position relative
+  padding-right 28%
+  &__totals
+    display block
+    position absolute
+    right 0
+    top 0
 
 .subgeography-totals__estimate
   font-weight 700
