--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -158,6 +158,8 @@ path
     fill-opacity 0.35
   &.active
     fill-opacity 0.3
+    &.active-zone
+      fill-opacity 0.8
 
 .region-central-africa__country,
 .region-central-africa__stratum
@@ -181,6 +183,8 @@ path
     fill-opacity 0.35
   &.active
     fill-opacity 0.3
+    &.active-zone
+      fill-opacity 0.8
 
 .region-southern-africa__country,
 .region-southern-africa__stratum
@@ -204,6 +208,8 @@ path
     fill-opacity 0.35
   &.active
     fill-opacity 0.3
+    &.active-zone
+      fill-opacity 0.8
 
 
 .region-eastern-africa__country,
@@ -228,6 +234,8 @@ path
     fill-opacity 0.35
   &.active
     fill-opacity 0.3
+    &.active-zone
+      fill-opacity 0.8
   
     
 .border
