--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -18,17 +18,18 @@
   
   &--input-zone
     td
-      padding 0.9em 0.65em 0.9em 22px
+      &:first-child
+        padding-top 0
+      padding 0.9em 0.65em 0.9em 50px
     tbody tr
       border-bottom none
     
     .sidebar__map-link
       position relative
       &:before
-        content '-'
+        content ''
         display inline-block
         position absolute
-        left -0.75em
     
   &--causes-of-change
     margin-top: 30px
@@ -56,6 +57,7 @@
   margin-left 0.3em
 
 .subgeography__input-zone
+  line-height 1.5
   position relative
   padding-right 28%
   &__totals
