update search font sizes

--- a/source/css/modules/search.styl
+++ b/source/css/modules/search.styl
@@ -55,7 +55,8 @@
   width 100%
   
   &::placeholder
-    letter-spacing 0.15em
+    font-size 0.65em
+    letter-spacing 0.12em
 
   &:focus,
   &:active
@@ -108,7 +109,8 @@
   background white
   border 1.5px solid $border
   border-top none
-  font-size 16px
+  font-size 0.9em
+  line-height 1.6
   transition 300ms ease background
   cursor pointer
   color $brand-dark
@@ -166,3 +168,4 @@
 .search__result__parent-label
   @extend .small-heading
   color $text-light
+  font-size 0.72em
