--- a/source/css/modules/intro.styl
+++ b/source/css/modules/intro.styl
@@ -12,31 +12,19 @@
   &-bg
     position fixed
     top 0
-    right 0
     bottom 0
     left 0
     overflow hidden
+    width 60%
     z-index -100
-    &__video
-      position absolute
-      top 50%
-      left 50%
-      width auto
-      height 100vh
-      transform translate(-50%, -50%)
-      @media (max-width $mobile-max)
-        display none
-      @media (min-aspect-ratio 16/9)
-        height 175vh
-      @media (max-aspect-ratio 16/9)
-        width 200vh
-        
+    background url('/images/aed-intro-background.jpg') no-repeat 20% 50%
+    background-size cover
 
   &__entity-name
     font-family 'Noe Display', Georgia, serif
     font-weight 700
     font-style normal
-    font-size 3em
+    font-size 2.8em
     letter-spacing 0.015em
     line-height 1.15
     margin 50px 0 10px //margin top change temporary
@@ -64,7 +52,7 @@
       width 100%
     
   .col-main
-    background rgba(40, 40, 40, 0.9)
+    background rgba(40, 40, 40, 1)
     float right
     height 100vh
     @media (max-width $mobile-max)
@@ -77,7 +65,7 @@
     background-position center bottom
     background-repeat no-repeat
     height 100%
-    min-height 625px
+    min-height 700px
     overflow-y auto
     padding 25px 0 20vh
     text-align center
@@ -85,6 +73,8 @@
     left 50%
     top 50%
     transform translate(-50%, -50%)
+    @media (max-width $mobile-max)
+      min-height 0
     
     a
       border-bottom 1px solid transparent
@@ -107,7 +97,7 @@
 
   .intro__description
     font-family 'acumin-pro', Helvetica, sans-serif
-    font-size 0.9em
+    font-size 0.85em
     font-weight 200
     letter-spacing 0.015em
     line-height 1.55
@@ -120,7 +110,7 @@
       margin-bottom 1em
     @media (max-width $mobile-max)
       font-size 0.82em
-      line-height 1.5
+      line-height 1.45
       
 
   .intro__loader
@@ -135,13 +125,16 @@
     animation intro-loader-background 10s 1 0s
     
     .intro__inner
+      opacity 0
       position absolute
       bottom 0
       right 0
       width 100%
+      -webkit-animation intro-header 7s 1 1s
+      animation intro-header 7s 1 
     
     h1
-      font-size 3.2em
+      font-size 3em
       left 50%
       line-height 1.1
       margin 0
@@ -167,7 +160,12 @@
         transform translate(-50%, -50%)
         width 75%
         @media (max-width $mobile-max)
-          width 80%
+          margin 0.25% auto
+          position relative
+          left 0
+          top 0
+          transform none
+          width 88%
       
 
   button, .button
