update about section

--- a/source/css/modules/about.styl
+++ b/source/css/modules/about.styl
@@ -221,6 +221,9 @@ $about-content-width = 70vw
       &.ste
         background-image url(/images/STE-logo.png)
         background-size 50%
+      &.scif
+        background-image url(/images/SCIF-logo.png)
+        background-size 35%
       &.mike
         background-image url(/images/MIKE-logo.png)
         background-size 40%
@@ -246,6 +249,9 @@ $about-content-width = 70vw
       &.solertium
         background-image url(/images/solertium-logo.png)
         background-size 50%
+      &.vulcan
+        background-image url(/images/vulcan-logo.png)
+        background-size 42%
         
 .reports
   .reports__list
