update table-fullwidth styles for extended sidebar

--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -82,7 +82,8 @@
     border-bottom 2px solid $gray-light
     th
       color $brand-dark-md
-      padding-bottom 1em
+      line-height 1.2
+      padding 0 0.75em 1em
     .th-parent
       color $gray-medium
       font-size 0.75em
@@ -91,5 +92,7 @@
       text-transform uppercase
   tbody tr 
     border-bottom 1px solid $gray-lightest
+    td
+      padding 1em 0.75em
   .subgeography-totals__totals
     border-top 2px solid $gray-light !important
