input zone sidebar data and back links in sidebar header

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -158,6 +158,13 @@ aside table
   font-size 0.9em
   line-height 1.4
   margin-top -10px
+  
+  a
+    text-decoration none
+    color inherit
+    
+    &:hover
+      text-decoration underline
 
 .sidebar__stats-table
   font-size 0.9em
