--- a/source/css/modules/total_count.styl
+++ b/source/css/modules/total_count.styl
@@ -4,7 +4,7 @@
   bottom 0
   left 0
   font-family 'acumin-pro-condensed', sans-serif
-  padding 0.3em 0.75em 0.5em
+  padding 0 0.75em 0.5em
   &__count
     color $brand-dark
     padding 0 0 0 0.05em
