styling refinement on active map items, back button on stratum and input zone sidebar

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -154,10 +154,13 @@ path
 .region-west-africa__stratum
   fill-opacity 0.1
   stroke-width 1.75
+  main.selected-zone &
+    stroke-opacity 0.7
   &:hover
     fill-opacity 0.35
+    stroke-opacity 1
   &.active
-    fill-opacity 0.3
+    fill-opacity 0.5
     &.active-zone
       fill-opacity 0.8
 
@@ -179,10 +182,13 @@ path
 .region-central-africa__stratum
   fill-opacity 0.1
   stroke-width 1.75
+  main.selected-zone &
+    stroke-opacity 0.7
   &:hover
     fill-opacity 0.35
+    stroke-opacity 1
   &.active
-    fill-opacity 0.3
+    fill-opacity 0.5
     &.active-zone
       fill-opacity 0.8
 
@@ -204,10 +210,13 @@ path
 .region-southern-africa__stratum
   fill-opacity 0.1
   stroke-width 1.75
+  main.selected-zone &
+    stroke-opacity 0.7
   &:hover
     fill-opacity 0.35
+    stroke-opacity 1
   &.active
-    fill-opacity 0.3
+    fill-opacity 0.5
     &.active-zone
       fill-opacity 0.8
 
@@ -230,10 +239,13 @@ path
 .region-eastern-africa__stratum
   fill-opacity 0.1
   stroke-width 1.75
+  main.selected-zone &
+    stroke-opacity 0.7
   &:hover
     fill-opacity 0.35
+    stroke-opacity 1
   &.active
-    fill-opacity 0.3
+    fill-opacity 0.5
     &.active-zone
       fill-opacity 0.8
   
