--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -151,8 +151,26 @@ aside table
   line-height 1.15
   margin 50px 0 10px //margin top change temporary
   -webkit-font-smoothing auto
+  
+  &__back
+    position absolute
+    height 30px
+    width 30px
+    top 0
+    left -30px
+    color white
+    text-decoration none
+    font-size 18px
+    text-align center
+    line-height 30px
+    font-family: 'acumin-pro', Helvetica, sans-serif;
+    cursor pointer
+  
+  &--input-zone, &--stratum
+    position relative
+     
 
-.sidebar__entity-input-zone
+.sidebar__entity-input-zone-subtitle
   font-weight normal
   font-style normal
   font-size 0.9em
