disable style on about sidebar button

--- a/source/css/modules/about.styl
+++ b/source/css/modules/about.styl
@@ -67,6 +67,10 @@ $about-content-width = 70vw
     width 100%
     &:hover
       background $brand-dark-md
+  
+  .button__disabled
+    background $gray-light
+    pointer-events none
 
   .about-menu
     position static
