headings on input zone list expanded table

--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -90,9 +90,20 @@
       font-weight 600
       letter-spacing 0.15em
       text-transform uppercase
+      
+    .th-center
+      text-align center
+    
+    .th-left
+      text-align left
+    
+    .th-right
+      text-align right
+      
   tbody tr 
     border-bottom 1px solid $gray-lightest
     td
       padding 1em 0.75em
+      
   .subgeography-totals__totals
     border-top 2px solid $gray-light !important
