input zones on dpps, misc cleanup and comments

--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -104,6 +104,15 @@
     border-bottom 1px solid $gray-lightest
     td
       padding 1em 0.75em
+    
+    .td-center
+      text-align center
+    
+    .td-left
+      text-align left
+    
+    .td-right
+      text-align right
       
   .subgeography-totals__totals
     border-top 2px solid $gray-light !important
