misc fixes per feedback

--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -84,6 +84,7 @@
       color $brand-dark-md
       line-height 1.2
       padding 0 0.75em 1em
+      white-space nowrap
     .th-parent
       color $gray-medium
       font-size 0.75em
