--- a/source/css/modules/ranges.styl
+++ b/source/css/modules/ranges.styl
@@ -39,7 +39,7 @@ $box = #bababa
   font-weight bold
   font-size 0.85em
   cursor pointer
-  pointer-events none
+  // pointer-events none
   &.shown[data-range-type="known"] .range__icon 
     background rgba(34,34,34,0.5)
   &.shown[data-range-type="possible"] .range__icon 
