--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -205,8 +205,8 @@ aside table
   tbody td,
   thead th
     padding 0.5em 0.65em
-    span
-      color $text-light
+    // span
+    //   color $text-light
     &:last-child
       font-weight bold
       text-align right
