--- a/source/css/modules/references.styl
+++ b/source/css/modules/references.styl
@@ -70,3 +70,18 @@
       color darken($central-africa, 20%)
       &:hover
         text-decoration underline
+    
+    &__back
+      width 22px
+      height 22px
+      position fixed
+      top 20px
+      left 20px
+      background transparent url(/images/icon-close.svg) no-repeat center center
+      background-size contain
+      cursor pointer
+      opacity 0.65
+      transition opacity 0.25s
+      &:hover
+        opacity 1
+        transition opacity 0.25s
