iz-stratum area fix, narrative updates, ranges style fix

--- a/source/css/modules/ranges.styl
+++ b/source/css/modules/ranges.styl
@@ -117,10 +117,8 @@ $box = #bababa
   top 62px
 
 .ranges_dropdown
-  padding 5px
-  transition max-height 200ms ease-in-out
+  padding 0 5px
   overflow hidden
-  padding 0
   margin 0
   &.contracted
     max-height 0
