--- a/source/css/modules/leaflet.styl
+++ b/source/css/modules/leaflet.styl
@@ -26,6 +26,7 @@
   background #ddd
   outline 0
   font 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif
+  min-height 100vh
   img
     max-width none !important
     &.leaflet-image-layer
