--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -361,8 +361,8 @@ aside table
     background-size 125px
     background-position center bottom
     background-repeat no-repeat
-
     height 100%
+    min-height 100vh
     text-align center
     width 100%
   h1
