--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -150,6 +150,7 @@ path
   
   &:hover
     fill-opacity 0.08
+    stroke-opacity 1
 
 .region-west-africa__stratum
   fill-opacity 0.1
@@ -178,6 +179,7 @@ path
   
   &:hover
     fill-opacity 0.08
+    stroke-opacity 1
 
 .region-central-africa__stratum
   fill-opacity 0.1
@@ -206,6 +208,7 @@ path
   
   &:hover
     fill-opacity 0.08
+    stroke-opacity 1
 
 .region-southern-africa__stratum
   fill-opacity 0.1
@@ -235,6 +238,7 @@ path
   
   &:hover
     fill-opacity 0.08
+    stroke-opacity 1
 
 .region-eastern-africa__stratum
   fill-opacity 0.1
