range persistence and continent styles update

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -46,11 +46,12 @@ $hover-fill-opacity = 0.08
   stroke-opacity $stroke-opacity
   fill-opacity $fill-opacity
   stroke-opacity 0.75
-  stroke-width 2
+  stroke-width 1.5
+  stroke-alignment inner
   &:hover
     fill-opacity 0.8
     stroke-opacity 1
-    stroke-width 2
+    stroke-width 2.5
 
 /* hide norhern africa's label */
 h1.region-4
@@ -134,7 +135,7 @@ path
     &:hover
       stroke $central-africa
       stroke-opacity 1
-      fill $central-africa 
+      fill $central-africa
 
 .region-west-africa__country,
 .region-west-africa__stratum
