inactive breadcrumb while loading

--- a/source/css/modules/breadcrumb-nav.styl
+++ b/source/css/modules/breadcrumb-nav.styl
@@ -21,6 +21,8 @@
   font-weight 300
   letter-spacing 0.15em
   transition color 0.2s
+  &.inactive
+    pointer-events none
   &:hover
     color $brand-dark
     transition color 0.2s
