--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -76,6 +76,18 @@
   border-bottom 0 !important
   border-top 1px solid black !important
 
+.subgeography-totals__footnote
+  font-family 'acumin-pro', Helvetica, sans-serif
+  color #888
+  font-size 0.8em
+  font-weight 600
+  line-height 1.3
+  text-transform uppercase
+  margin-bottom 1em
+  
+  sup
+    bottom 0.5em
+
 .table-fullwidth
   margin-bottom 4em
   thead
