summary totals table with assessed and unassessed range in table

--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -129,3 +129,7 @@
       
   .subgeography-totals__totals
     border-top 2px solid $gray-light !important
+    border-bottom 1px solid $gray-light !important
+    &.range-totals
+      border-top 1px solid $gray-light !important
+      border-bottom none !important
