--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -9,6 +9,9 @@
     &:hover
       background #f8f8f8
       transition background-color 0.3s
+    
+    &.population
+      border none
   thead tr
     border-top 0
   th:not(:first-child), td:not(:first-child)
@@ -33,6 +36,10 @@
     
   &--causes-of-change
     margin-top: 30px
+  
+  &__population-name
+    border none
+    padding-top 1.5em
 
 .subgeography-totals__subgeography-name
   position relative
@@ -117,6 +124,15 @@
     border-bottom 1px solid $gray-lightest
     td
       padding 1em 0.75em
+      
+      &.subgeography-totals__population-name
+        font-family 'acumin-pro', Helvetica, sans-serif
+        font-size 0.8em
+        font-weight 600
+        line-height 1.3
+        text-transform uppercase
+        border-bottom 2px solid $gray-light !important
+        border-top 1px solid $gray-light !important
     
     .td-center
       text-align center
