--- a/source/css/modules/intro.styl
+++ b/source/css/modules/intro.styl
@@ -141,7 +141,7 @@
       width 100%
       -webkit-animation intro-header 7s 1 1s
       animation intro-header 7s 1 
-    
+          
     h1
       font-size 3em
       left 50%
@@ -155,8 +155,7 @@
       animation intro-header 7s 1 
       @media (max-width $mobile-max)
         font-size 2.8em
-      
-      
+                
   .intro__loaded
     position absolute
     z-index 2
@@ -253,3 +252,15 @@
     
   100%
     opacity 0
+
+.intro.placeholder
+  *
+    animation none !important
+    opacity 1 !important
+  h2
+    position: absolute;
+    opacity: 0;
+    top: 50%;
+    left 50%;
+    transform: translate(-50%, -50%);
+    margin-top 25%
