--- a/source/css/modules/intro.styl
+++ b/source/css/modules/intro.styl
@@ -9,6 +9,16 @@
   overflow auto  
   z-index 1002
   
+  .about-us__link-grid__link
+    @media (max-width 1599px)
+      height 80px
+      margin 15px 0 0
+    @media (max-width 899px)
+      margin 0
+    @media (max-width $mobile-max)
+      height 120px
+      margin 30px 0 0
+
   &-bg
     position fixed
     top 0
@@ -59,11 +69,11 @@
       background rgba(40, 40, 40, 1)
     
   .intro__inner
-    background-color transparent
-    background-image url('/images/elephant-loader.gif')
-    background-size 125px
-    background-position center bottom
-    background-repeat no-repeat
+    // background-color transparent
+    // background-image url('/images/elephant-loader.gif')
+    // background-size 125px
+    // background-position center bottom
+    // background-repeat no-repeat
     height 100%
     min-height 700px
     overflow-y auto
@@ -77,9 +87,9 @@
       background-image none
     @media (max-width $mobile-max)
       min-height 0
-      background-image url('/images/elephant-loader.gif')
+      // background-image url('/images/elephant-loader.gif')
     
-    a
+    a:not(.about-us__link-grid__link)
       border-bottom 1px solid transparent
       color $southern-africa
       text-decoration none
@@ -111,15 +121,16 @@
     p
       font-weight 100
       margin-bottom 1em
+    @media (max-height 749px)
+      font-size 0.75em
     @media (max-width 1249px)
-      font-size 0.78em
+      font-size 0.7em
     @media (max-width 1000px)
-      font-size 0.72em
+      font-size 0.65em
     @media (max-width $mobile-max)
       font-size 0.82em
       line-height 1.45
-    @media (max-height 749px)
-      font-size 0.75em
+    
       
 
   .intro__loader
@@ -141,6 +152,11 @@
       width 100%
       -webkit-animation intro-header 7s 1 1s
       animation intro-header 7s 1 
+      background-color transparent
+      background-image url('/images/elephant-loader.gif')
+      background-size 125px
+      background-position center bottom
+      background-repeat no-repeat
           
     h1
       font-size 3em
