--- a/source/css/modules/about.styl
+++ b/source/css/modules/about.styl
@@ -210,6 +210,9 @@ $about-content-width = 70vw
       &.afesg
         background-image url(/images/afesg-logo.png)
         background-size 70%
+      &.afesg_white
+        background-image url(/images/afesg-white.png)
+        background-size 70%
         
 .partners-resources
   &__link-grid
@@ -233,7 +236,7 @@ $about-content-width = 70vw
         background-size 40%
       &.defra
         background-image url(/images/DEFRA-logo.png)
-        background-size 50%
+        background-size 40%
       &.tusk
         background-image url(/images/Tusk-logo.png)
         background-size 50%
@@ -247,6 +250,7 @@ $about-content-width = 70vw
       &.ec
         background-image url(/images/EC-logo.png)
         background-size 35%
+        display none
       &.cites
         background-image url(/images/CITES-logo.png)
         background-size 40%
