--- a/source/css/modules/intro.styl
+++ b/source/css/modules/intro.styl
@@ -9,6 +9,20 @@
   overflow auto  
   z-index 1002
   
+  &:before
+    content 'BETA'
+    color $west-africa
+    font-size 1em
+    display inline-block
+    position absolute
+    top 0
+    left 0
+    padding 15px
+    font-family 'acumin-pro', Helvetica, sans-serif
+    font-weight 600
+    letter-spacing 0.1em
+    
+  
   .about-us__link-grid__link
     @media (max-width 1599px)
       height 80px
