chagning color of beta

--- a/source/css/modules/intro.styl
+++ b/source/css/modules/intro.styl
@@ -11,7 +11,7 @@
   
   &:before
     content 'BETA'
-    color $west-africa
+    color $southern-africa
     font-size 1em
     display inline-block
     position absolute
