--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -5,6 +5,7 @@ $hover-fill-opacity = 0.08
 .leaflet-container
   width 100%
   height 100%
+  background white
   
 .leaflet-control-container
   position absolute
