--- a/source/css/modules/about.styl
+++ b/source/css/modules/about.styl
@@ -167,6 +167,7 @@ $about-content-width = 70vw
     color $brand-dark
     font-size 26px
     margin 1em 0
+    line-height 1.25
   p
     color $brand-dark
     margin 1.5em 0
